# clickhouse-olap

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  README.md
.claude/: settings.json
.github/workflows/: ci.yml  release.yml
addin/: .eslintrc.json  jest.config.js  manifest.xml  package-lock.json  package.json  tsconfig.json  tsconfig.test.json  webpack.config.js
addin/src/: index.html
addin/src/api/: engineClient.ts  types.ts
addin/src/components/: PivotBuilder.ts  ResultRenderer.ts
addin/src/docs/: clickhouse.html
addin/src/taskpane/: taskpane.html  taskpane.ts
addin/src/utils/: settings.ts  uuid.ts
addin/tests/mocks/: officeMock.ts
addin/tests/unit/: engineClient.test.ts  pivotBuilder.test.ts  resultRenderer.test.ts
docs/: deployment-ubuntu.md
engine/: Cargo.toml
engine/config/: config.example.toml  config.local.toml
engine/config/models/: sales_model.toml
engine/docker/: docker-compose.dev.yml
engine/scripts/: seed_test_data.sh
engine/src/: cache.rs  config.rs  error.rs  lib.rs  main.rs  state.rs
engine/src/api/: handlers.rs  types.rs
engine/src/clickhouse/: mod.rs
engine/src/pivot/: mod.rs
engine/src/query/: mod.rs  plan.rs  sql.rs
engine/src/semantic/: mod.rs
project_requirements/: 00_overview_vision.md  01_functional_requirements.md  02_nonfunctional_requirements.md  03_architecture_and_protocol.md  04_agentic_dev_plan.md  05_claude_code_bootstrap_prompt.md
site/: index.html  site.css
site/docs/: addin.html  clickhouse.html  engine.html
