[package]
name    = "clickhouse-olap-engine"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "engine"
path = "src/main.rs"

[lib]
name = "engine_lib"
path = "src/lib.rs"

[dependencies]
axum           = { version = "0.8", features = ["json", "macros"] }
tokio          = { version = "1",   features = ["full"] }
tower-http     = { version = "0.6", features = ["cors", "trace"] }
serde          = { version = "1",   features = ["derive"] }
serde_json     = "1"
reqwest        = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
thiserror      = "2"
anyhow         = "1"
uuid           = { version = "1",   features = ["v4", "serde"] }
tracing        = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
toml           = "0.8"
moka           = { version = "0.12", features = ["future"] }
chrono         = { version = "0.4",  features = ["serde"] }
clap           = { version = "4",    features = ["derive"] }
tokio-util     = { version = "0.7",  features = ["rt"] }
http           = "1"

[dev-dependencies]
tokio-test  = "0.4"
